--- a/index.html
+++ b/index.html
@@ -64,6 +64,58 @@
 			  </div>
 		</section>
 
+		<!-- MI EXPERIENCIA -->
+		<section class="experiencia">
+	<!--TITULAR-->
+			<h1 class="titulo">Experiencia</h1>
+			<br>
+			      <!--inicio carousel-->
+			     <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
+					  <ol class="carousel-indicators">
+					    <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
+					    <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
+					    <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
+					  </ol>
+					  <div class="carousel-inner" id="items">
+					    <div class="carousel-item active">
+					      <img src="assets/img/diseño.jpg" class="d-block w-100" alt="...">
+					      <div class="carousel-caption d-none d-md-block">
+					        <h5>DISEÑO INDUSTRIAL <i class="fas fa-pencil-ruler"></i></h5>
+					        <p>Universidad Nacional de Córdoba, Argentina.</p>
+					      </div>
+					    </div>
+					    <div class="carousel-item">
+					      <img src="assets/img/uxui.jpg" class="d-block w-100" alt="...">
+					      <div class="carousel-caption d-none d-md-block">
+					        <h5>DISEÑO UXUI <i class="fas fa-tablet-alt"></i></h5>
+					        <p>Academia Desafío Latam, Córdoba, Argentina.</p>
+					      </div>
+					    </div>
+
+					  </div>
+					  <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
+					    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+					    <span class="sr-only">Previous</span>
+					  </a>
+					  <a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-slide="next">
+					    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+					    <span class="sr-only">Next</span>
+					  </a>
+					</div>
+			      <!--fin carousel-->
+			    </div>
+		</section>
+		<br><br>
+
+
+
+
+
+
+
+
+
+
 	<!-- JQUERY -->
 	<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
