--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
 		<section class= "d-none d-md-block">
 	<!--TITULAR-->
 			<h1 class="titulo">Sobre mi</h1>
+			<br><br>
 	<!-- GRILLA X2 -->
 			<div class="container">
 			  <div class="row">
@@ -68,7 +69,7 @@
 		<section class="experiencia">
 	<!--TITULAR-->
 			<h1 class="titulo">Experiencia</h1>
-			<br>
+			<br><br>
 			      <!--inicio carousel-->
 			     <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
 					  <ol class="carousel-indicators">
@@ -106,6 +107,107 @@
 			    </div>
 		</section>
 		<br><br>
+
+		<!-- ULTIMOS TRABAJOS -->
+		<section class="ultimos_trabajos">}
+			<h1 class="titulo">Mis últimos trabajos</h1>
+			<br><br>
+			<div class="container">
+			  <div class="row">
+			    <div class="col-sm">
+			    	<!-- PRIMER CARD -->
+			      <div class="card" style="width: 18rem;">
+					  <img src="assets/img/cuppon.png" class="card-img-top" alt="...">
+					  <div class="card-body">
+					    <h5 class="card-title">Diseño "Cuppon"</h5>
+					    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+					    <button type="button" class="btn btn-outline-dark">Ver más</button>
+					  </div>
+					</div>
+			    </div>
+
+
+			    <div class="col-sm">
+			    	<!-- SEGUNDA CARD -->
+			      <div class="card" style="width: 18rem;">
+					  <img src="assets/img/ricomida.png" class="card-img-top" alt="...">
+					  <div class="card-body">
+					    <h5 class="card-title">Diseño "Ricomida"</h5>
+					    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+					    <button type="button" class="btn btn-outline-dark">Ver más</button>
+					  </div>
+					</div>
+			    </div>
+
+
+			    <div class="col-sm">
+			      <!-- TERCER CARD -->
+			      <div class="card" style="width: 18rem;">
+					  <img src="assets/img/iguana_page.png" class="card-img-top" alt="...">
+					  <div class="card-body">
+					    <h5 class="card-title">Diseño "Iguana Page"</h5>
+					    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+					    <button type="button" class="btn btn-outline-dark">Ver más</button>
+					  </div>
+					</div>
+			    </div>
+			  </div>
+			</div>
+			<br><br>
+
+			<!-- SEGUNDA FILA DE 3 COLUMNAS-->
+
+			<div class="container">
+				  <div class="row">
+				    <div class="col-sm">
+				    <!-- PRIMER CARD -->
+				     <div class="card" style="width: 18rem;">
+						  <img src="assets/img/suricata.png" class="card-img-top" alt="...">
+						  <div class="card-body">
+						    <h5 class="card-title">Diseño "Suricata"</h5>
+						    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+						    <button type="button" class="btn btn-outline-dark">Ver más</button>
+						  </div>
+						</div>
+				    </div>
+
+
+
+				    <div class="col-sm">
+				    	<!-- SEGUNDA CARD -->
+				      <div class="card" style="width: 18rem;">
+						  <img src="assets/img/dmark.png" class="card-img-top" alt="...">
+						  <div class="card-body">
+						    <h5 class="card-title">Diseño "Demark"</h5>
+						    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+						    <button type="button" class="btn btn-outline-dark">Ver más</button>
+						  </div>
+						</div>
+				    </div>
+
+
+
+				    <div class="col-sm">
+				    	<!-- TERCER CARD-->
+				      <div class="card" style="width: 18rem;">
+						  <img src="assets/img/meet_coffee.png" class="card-img-top" alt="...">
+						  <div class="card-body">
+						    <h5 class="card-title">Diseño "Meet&Coffee"</h5>
+						    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+						    <button type="button" class="btn btn-outline-dark">Ver más</button>
+						  </div>
+						</div>
+				    </div>
+				  </div>
+				</div>
+
+
+		</section>
+
+
+
+
+
 
 
 
