--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 					  <div class="card-body">
 					    <h5 class="card-title">Diseño "Cuppon"</h5>
 					    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-					    <button type="button" class="btn btn-outline-dark">Ver más</button>
+					    <button type="button" class="btn btn-outline-dark" data-toggle="modal" data-target="#cuppon">Ver más</button>
 					  </div>
 					</div>
 			    </div>
@@ -134,7 +134,7 @@
 					  <div class="card-body">
 					    <h5 class="card-title">Diseño "Ricomida"</h5>
 					    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-					    <button type="button" class="btn btn-outline-dark">Ver más</button>
+					    <button type="button" class="btn btn-outline-dark" data-toggle="modal" data-target="#ricomida">Ver más</button>
 					  </div>
 					</div>
 			    </div>
@@ -147,7 +147,7 @@
 					  <div class="card-body">
 					    <h5 class="card-title">Diseño "Iguana Page"</h5>
 					    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-					    <button type="button" class="btn btn-outline-dark">Ver más</button>
+					    <button type="button" class="btn btn-outline-dark" data-toggle="modal" data-target="#iguana">Ver más</button>
 					  </div>
 					</div>
 			    </div>
@@ -166,7 +166,7 @@
 						  <div class="card-body">
 						    <h5 class="card-title">Diseño "Suricata"</h5>
 						    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-						    <button type="button" class="btn btn-outline-dark">Ver más</button>
+						    <button type="button" class="btn btn-outline-dark" data-toggle="modal" data-target="#suricata">Ver más</button>
 						  </div>
 						</div>
 				    </div>
@@ -180,7 +180,7 @@
 						  <div class="card-body">
 						    <h5 class="card-title">Diseño "Demark"</h5>
 						    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-						    <button type="button" class="btn btn-outline-dark">Ver más</button>
+						    <button type="button" class="btn btn-outline-dark" data-toggle="modal" data-target="#dmark">Ver más</button>
 						  </div>
 						</div>
 				    </div>
@@ -194,7 +194,7 @@
 						  <div class="card-body">
 						    <h5 class="card-title">Diseño "Meet&Coffee"</h5>
 						    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-						    <button type="button" class="btn btn-outline-dark">Ver más</button>
+						    <button type="button" class="btn btn-outline-dark" data-toggle="modal" data-target="#meet_coffee">Ver más</button>
 						  </div>
 						</div>
 				    </div>
@@ -203,6 +203,208 @@
 
 
 		</section>
+		<!--MODAL MEET & COFFEE -->
+			<div class="modal fade" id="meet_coffee" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+				  <div class="modal-dialog">
+				    <div class="modal-content">
+				      <div class="modal-header">
+				        <h5 class="modal-title container-fluid text-center" id="exampleModalLabel">Diseño Meet&Coffee</h5>
+				        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+				          <span aria-hidden="true">&times;</span>
+				        </button>
+				      </div>
+				      <div class="modal-body">
+				      	<img src="assets/img/meet_coffee.png" width="450px" height="270px">
+				      	<br><br>
+				      	 	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+				        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+				        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+				        consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+				        cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+				        proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+				        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+				        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+				        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+				        consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+				        cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+				        proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>			        
+				      </div>
+				      <div class="modal-footer">
+				        <button type="button" class="btn btn-outline-dark" data-dismiss="modal">Cerrar</button>			
+				      </div>
+				    </div>
+				  </div>
+			</div>
+
+
+			<!--MODAL DMARK -->
+
+			<div class="modal fade" id="dmark" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+				  <div class="modal-dialog">
+				    <div class="modal-content">
+				      <div class="modal-header">
+				        <h5 class="modal-title container-fluid text-center" id="exampleModalLabel">Diseño Dmark</h5>
+				        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+				          <span aria-hidden="true">&times;</span>
+				        </button>
+				      </div>
+				      <div class="modal-body">
+				      	<img src="assets/img/dmark.png" width="450px" height="270px">
+				      	<br><br>
+				      	 	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+				        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+				        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+				        consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+				        cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+				        proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+				        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+				        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+				        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+				        consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+				        cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+				        proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>			        
+				      </div>
+				      <div class="modal-footer">
+				        <button type="button" class="btn btn-outline-dark" data-dismiss="modal">Cerrar</button>			
+				      </div>
+				    </div>
+				  </div>
+			</div>
+
+
+			<!--MODAL SURICATA -->
+			<div class="modal fade" id="suricata" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+				  <div class="modal-dialog">
+				    <div class="modal-content">
+				      <div class="modal-header">
+				        <h5 class="modal-title container-fluid text-center" id="exampleModalLabel">Diseño Suricata</h5>
+				        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+				          <span aria-hidden="true">&times;</span>
+				        </button>
+				      </div>
+				      <div class="modal-body">
+				      	<img src="assets/img/suricata.png" width="450px" height="270px">
+				      	<br><br>
+				      	 	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+				        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+				        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+				        consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+				        cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+				        proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+				        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+				        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+				        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+				        consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+				        cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+				        proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>			        
+				      </div>
+				      <div class="modal-footer">
+				        <button type="button" class="btn btn-outline-dark" data-dismiss="modal">Cerrar</button>			
+				      </div>
+				    </div>
+				  </div>
+			</div>
+
+			<!-- MODAL IGUANA PAGE -->
+			<div class="modal fade" id="iguana" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+				  <div class="modal-dialog">
+				    <div class="modal-content">
+				      <div class="modal-header">
+				        <h5 class="modal-title container-fluid text-center" id="exampleModalLabel">Diseño Iguana Page</h5>
+				        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+				          <span aria-hidden="true">&times;</span>
+				        </button>
+				      </div>
+				      <div class="modal-body">
+				      	<img src="assets/img/iguana_page.png" width="450px" height="270px">
+				      	<br><br>
+				      	 	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+				        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+				        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+				        consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+				        cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+				        proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+				        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+				        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+				        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+				        consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+				        cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+				        proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>			        
+				      </div>
+				      <div class="modal-footer">
+				        <button type="button" class="btn btn-outline-dark" data-dismiss="modal">Cerrar</button>			
+				      </div>
+				    </div>
+				  </div>
+			</div>
+
+
+			<!-- MODAL RICOMIDA -->
+			<div class="modal fade" id="ricomida" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+				  <div class="modal-dialog">
+				    <div class="modal-content">
+				      <div class="modal-header">
+				        <h5 class="modal-title container-fluid text-center" id="exampleModalLabel">Diseño Ricomida</h5>
+				        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+				          <span aria-hidden="true">&times;</span>
+				        </button>
+				      </div>
+				      <div class="modal-body">
+				      	<img src="assets/img/ricomida.png" width="450px" height="270px">
+				      	<br><br>
+				      	 	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+				        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+				        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+				        consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+				        cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+				        proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+				        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+				        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+				        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+				        consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+				        cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+				        proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>			        
+				      </div>
+				      <div class="modal-footer">
+				        <button type="button" class="btn btn-outline-dark" data-dismiss="modal">Cerrar</button>			
+				      </div>
+				    </div>
+				  </div>
+			</div>
+
+			<!-- MODAL CUPPON -->
+			<div class="modal fade" id="cuppon" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+				  <div class="modal-dialog">
+				    <div class="modal-content">
+				      <div class="modal-header">
+				        <h5 class="modal-title container-fluid text-center" id="exampleModalLabel">Diseño Cuppon</h5>
+				        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+				          <span aria-hidden="true">&times;</span>
+				        </button>
+				      </div>
+				      <div class="modal-body">
+				      	<img src="assets/img/cuppon.png" width="450px" height="270px">
+				      	<br><br>
+				      	 	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+				        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+				        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+				        consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+				        cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+				        proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+				        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+				        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+				        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+				        consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+				        cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+				        proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>			        
+				      </div>
+				      <div class="modal-footer">
+				        <button type="button" class="btn btn-outline-dark" data-dismiss="modal">Cerrar</button>			
+				      </div>
+				    </div>
+				  </div>
+			</div>
+
 
 
 
