--- a/index.html
+++ b/index.html
@@ -203,6 +203,7 @@
 
 
 		</section>
+
 		<!--MODAL MEET & COFFEE -->
 			<div class="modal fade" id="meet_coffee" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
 				  <div class="modal-dialog">
@@ -404,6 +405,19 @@
 				    </div>
 				  </div>
 			</div>
+			<br><br>
+
+		<section class="contacto">
+			<div class="typeform-widget" data-url="https://gquirogaoliva.typeform.com/to/LovBYG" style="width: 100%; height: 350px;"></div> <script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm", b="https://embed.typeform.com/"; if(!gi.call(d,id)) { js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script> <div style="font-family: Sans-Serif;font-size: 12px;color: #999;opacity: 0.5; padding-top: 5px;"> powered by <a href="https://admin.typeform.com/signup?utm_campaign=LovBYG&utm_source=typeform.com-01E94CT2RC0FAQK4QGG8CXHEFT-free&utm_medium=typeform&utm_content=typeform-embedded-poweredbytypeform&utm_term=ES" style="color: #999" target="_blank">Typeform</a> </div>
+		</section>
+		<br><br><br><br><br>
+
+
+		<footer>
+			<i class="fab fa-instagram fa-3x"></i>
+			<i class="fab fa-facebook-f fa-3x"></i>
+		</footer>
+
 
 
 
@@ -425,6 +439,6 @@
 	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
 	<!-- MI ARCHIVO JS -->
-	<script src="assets/js/script.js"></script>
+	<script src="assets/js/script.js" width="110.5px" height="164px"></script>
 </body>
 </html>
