--- a/index.html
+++ b/index.html
@@ -17,31 +17,33 @@
 
 <body>
 
-	<!-- NAV BAR BOOTSTRAP -->
-	<nav class="navbar navbar-expand-lg navbar- bg- navbar fixed-top">
-  <a class="navbar-brand" href="#"><img class="logo_nav" src="assets/img/logo.png" width="110.5px" height="164px"></a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-    <div class="navbar-nav ml-auto">
-      <a class="nav-item nav-link active" href="#">Sobre Mi<span class="sr-only">(current)</span></a>
-      <a class="nav-item nav-link" href="#">Experiencia</a>
-      <a class="nav-item nav-link" href="#">Trabajos</a>
-      <a class="nav-item nav-link" href="#">Contacto</a>
-    </div>
-  </div>
-</nav>
-	
+<!-- NAV BAR BOOTSTRAP -->
+		<nav class="navbar navbar-expand-lg navbar- bg- navbar fixed-top">
+	  <a class="navbar-brand" href="#"><img class="logo_nav" src="assets/img/logo.png" width="55.25px" height="82px"></a>
+	  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+	    <span class="navbar-toggler-icon"></span>
+	  </button>
+	  <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+	    <div class="navbar-nav ml-auto">
+	      <a class="nav-item nav-link active" href="#sobre_mi">Sobre Mi<span class="sr-only">(current)</span></a>
+	      <a class="nav-item nav-link" href="#mi_experiencia">Experiencia</a>
+	      <a class="nav-item nav-link" href="#ultimos_trabajos">Trabajos</a>
+	      <a class="nav-item nav-link" href="#contacto">Contacto</a>
+	    </div>
+	  </div>
+	</nav>
+		
 
 	<!-- IMAGEN BG-HERO -->
 		<img class="bg-hero" src="assets/img/bg-hero.jpg">
 		<br><br>
 
-	<!-- SECCION SOBRE MI -->
-		<section class= "d-none d-md-block">
+<!-- SECTION SOBRE MI -->
+		<section id="sobre_mi" class= "d-none d-md-block">
 	<!--TITULAR-->
-			<h1 class="titulo">Sobre mi</h1>
+			<h1 class="titulo" text-center>Sobre mi</h1>
+			<p class="subtitulo">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+			tempor incididunt ut labore et dolore magna aliqua.</p>
 			<br><br>
 	<!-- GRILLA X2 -->
 			<div class="container">
@@ -65,12 +67,15 @@
 			  </div>
 		</section>
 
-		<!-- MI EXPERIENCIA -->
-		<section class="experiencia">
-	<!--TITULAR-->
+<!-- SECTION MI EXPERIENCIA -->
+		<section id="mi_experiencia">
+		<!--TITULAR-->
 			<h1 class="titulo">Experiencia</h1>
+			<p class="subtitulo">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+			tempor incididunt ut labore et dolore magna aliqua.</p>
 			<br><br>
-			      <!--inicio carousel-->
+
+			    <!--inicio carousel-->
 			     <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
 					  <ol class="carousel-indicators">
 					    <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
@@ -103,19 +108,22 @@
 					    <span class="sr-only">Next</span>
 					  </a>
 					</div>
-			      <!--fin carousel-->
+			    <!--fin carousel-->
 			    </div>
 		</section>
 		<br><br>
 
-		<!-- ULTIMOS TRABAJOS -->
-		<section class="ultimos_trabajos">}
+<!-- SECTION ULTIMOS TRABAJOS -->
+		<section id="ultimos_trabajos">}
 			<h1 class="titulo">Mis últimos trabajos</h1>
+			<p class="subtitulo">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+			tempor incididunt ut labore et dolore magna aliqua.</p>
 			<br><br>
 			<div class="container">
 			  <div class="row">
 			    <div class="col-sm">
-			    	<!-- PRIMER CARD -->
+
+<!-- PRIMER CARD -->
 			      <div class="card" style="width: 18rem;">
 					  <img src="assets/img/cuppon.png" class="card-img-top" alt="...">
 					  <div class="card-body">
@@ -125,10 +133,9 @@
 					  </div>
 					</div>
 			    </div>
-
-
 			    <div class="col-sm">
-			    	<!-- SEGUNDA CARD -->
+
+<!-- SEGUNDA CARD -->
 			      <div class="card" style="width: 18rem;">
 					  <img src="assets/img/ricomida.png" class="card-img-top" alt="...">
 					  <div class="card-body">
@@ -138,10 +145,9 @@
 					  </div>
 					</div>
 			    </div>
-
-
 			    <div class="col-sm">
-			      <!-- TERCER CARD -->
+
+<!-- TERCER CARD -->
 			      <div class="card" style="width: 18rem;">
 					  <img src="assets/img/iguana_page.png" class="card-img-top" alt="...">
 					  <div class="card-body">
@@ -155,12 +161,12 @@
 			</div>
 			<br><br>
 
-			<!-- SEGUNDA FILA DE 3 COLUMNAS-->
-
+<!-- SEGUNDA FILA DE 3 COLUMNAS-->
 			<div class="container">
 				  <div class="row">
 				    <div class="col-sm">
-				    <!-- PRIMER CARD -->
+
+<!-- PRIMER CARD -->
 				     <div class="card" style="width: 18rem;">
 						  <img src="assets/img/suricata.png" class="card-img-top" alt="...">
 						  <div class="card-body">
@@ -170,11 +176,9 @@
 						  </div>
 						</div>
 				    </div>
-
-
-
 				    <div class="col-sm">
-				    	<!-- SEGUNDA CARD -->
+
+<!-- SEGUNDA CARD -->
 				      <div class="card" style="width: 18rem;">
 						  <img src="assets/img/dmark.png" class="card-img-top" alt="...">
 						  <div class="card-body">
@@ -184,11 +188,10 @@
 						  </div>
 						</div>
 				    </div>
-
-
-
 				    <div class="col-sm">
-				    	<!-- TERCER CARD-->
+
+
+<!-- TERCER CARD-->
 				      <div class="card" style="width: 18rem;">
 						  <img src="assets/img/meet_coffee.png" class="card-img-top" alt="...">
 						  <div class="card-body">
@@ -204,7 +207,7 @@
 
 		</section>
 
-		<!--MODAL MEET & COFFEE -->
+<!--MODAL MEET & COFFEE -->
 			<div class="modal fade" id="meet_coffee" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
 				  <div class="modal-dialog">
 				    <div class="modal-content">
@@ -238,7 +241,7 @@
 			</div>
 
 
-			<!--MODAL DMARK -->
+<!--MODAL DMARK -->
 
 			<div class="modal fade" id="dmark" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
 				  <div class="modal-dialog">
@@ -273,7 +276,7 @@
 			</div>
 
 
-			<!--MODAL SURICATA -->
+<!--MODAL SURICATA -->
 			<div class="modal fade" id="suricata" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
 				  <div class="modal-dialog">
 				    <div class="modal-content">
@@ -306,7 +309,7 @@
 				  </div>
 			</div>
 
-			<!-- MODAL IGUANA PAGE -->
+<!-- MODAL IGUANA PAGE -->
 			<div class="modal fade" id="iguana" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
 				  <div class="modal-dialog">
 				    <div class="modal-content">
@@ -340,7 +343,7 @@
 			</div>
 
 
-			<!-- MODAL RICOMIDA -->
+<!-- MODAL RICOMIDA -->
 			<div class="modal fade" id="ricomida" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
 				  <div class="modal-dialog">
 				    <div class="modal-content">
@@ -373,7 +376,7 @@
 				  </div>
 			</div>
 
-			<!-- MODAL CUPPON -->
+<!-- MODAL CUPPON -->
 			<div class="modal fade" id="cuppon" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
 				  <div class="modal-dialog">
 				    <div class="modal-content">
@@ -407,7 +410,8 @@
 			</div>
 			<br><br>
 
-		<section class="contacto">
+<!--SECTION CONTACTO CON TYPEFORM-->
+		<section id="contacto">
 			<div class="typeform-widget" data-url="https://gquirogaoliva.typeform.com/to/LovBYG" style="width: 100%; height: 350px;"></div> <script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm", b="https://embed.typeform.com/"; if(!gi.call(d,id)) { js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script> <div style="font-family: Sans-Serif;font-size: 12px;color: #999;opacity: 0.5; padding-top: 5px;"> powered by <a href="https://admin.typeform.com/signup?utm_campaign=LovBYG&utm_source=typeform.com-01E94CT2RC0FAQK4QGG8CXHEFT-free&utm_medium=typeform&utm_content=typeform-embedded-poweredbytypeform&utm_term=ES" style="color: #999" target="_blank">Typeform</a> </div>
 		</section>
 		<br><br><br><br><br>
@@ -415,27 +419,18 @@
 
 
 
-
+<!--FOOTER-->
 		<footer>
-			<i class="fab fa-instagram fa-2x"></i>
-			<i class="fab fa-facebook-f fa-2x"></i>
+			<a href="https://www.instagram.com/guaddda/" target="_blank"><i class="fab fa-instagram fa-2x"></i></a>
+			<a href="https://www.facebook.com/guada.quirogaoliva" target="_blank"><i class="fab fa-facebook-f fa-2x"></i></a>
 		</footer>
 
-
-
-
-
-
-
-
-
-
-
-	<!-- JQUERY -->
-	<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+<!-- JQUERY -->
+	<script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
 	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
-	<!-- MI ARCHIVO JS -->
-	<script src="assets/js/script.js" width="110.5px" height="164px"></script>
+<!-- MI ARCHIVO JS -->
+	<script src="assets/js/script.js"></script>
+
 </body>
 </html>
