--- a/index.html
+++ b/index.html
@@ -13,12 +13,13 @@
 	<!-- FONTAWESOME -->
 	<script src="https://kit.fontawesome.com/fe3c70f95c.js" crossorigin="anonymous"></script>
 	<title>Mi portafolio</title>
+	<link rel="shortcut icon" href="assets/img/logo_header.png">
 </head>
 
 <body>
 
 <!-- NAV BAR BOOTSTRAP -->
-		<nav class="navbar navbar-expand-lg navbar- bg- navbar fixed-top">
+		<nav class="navbar navbar-expand-lg navbar-light bg- navbar fixed-top">
 	  <a class="navbar-brand" href="#"><img class="logo_nav" src="assets/img/logo.png" width="55.25px" height="82px"></a>
 	  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
 	    <span class="navbar-toggler-icon"></span>
@@ -44,6 +45,7 @@
 			<h1 class="titulo" text-center>Sobre mi</h1>
 			<p class="subtitulo">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 			tempor incididunt ut labore et dolore magna aliqua.</p>
+			<hr width="10%">
 			<br><br>
 	<!-- GRILLA X2 -->
 			<div class="container">
@@ -73,6 +75,7 @@
 			<h1 class="titulo">Experiencia</h1>
 			<p class="subtitulo">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 			tempor incididunt ut labore et dolore magna aliqua.</p>
+			<hr width="10%">
 			<br><br>
 
 			    <!--inicio carousel-->
@@ -87,17 +90,16 @@
 					      <img src="assets/img/diseño.jpg" class="d-block w-100" alt="...">
 					      <div class="carousel-caption d-none d-md-block">
 					        <h5>DISEÑO INDUSTRIAL <i class="fas fa-pencil-ruler"></i></h5>
-					        <p>Universidad Nacional de Córdoba, Argentina.</p>
+					        <p><a href="https://www.unc.edu.ar/" target="_blank">Universidad Nacional de Córdoba, Argentina.</a></p>
 					      </div>
 					    </div>
 					    <div class="carousel-item">
 					      <img src="assets/img/uxui.jpg" class="d-block w-100" alt="...">
 					      <div class="carousel-caption d-none d-md-block">
 					        <h5>DISEÑO UXUI <i class="fas fa-tablet-alt"></i></h5>
-					        <p>Academia Desafío Latam, Córdoba, Argentina.</p>
+					        <p><a href="https://desafiolatam.com/" target="_blank">Academia Desafío Latam, Córdoba, Argentina.</a></p>
 					      </div>
 					    </div>
-
 					  </div>
 					  <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
 					    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -118,6 +120,7 @@
 			<h1 class="titulo">Mis últimos trabajos</h1>
 			<p class="subtitulo">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 			tempor incididunt ut labore et dolore magna aliqua.</p>
+			<hr width="10%">
 			<br><br>
 			<div class="container">
 			  <div class="row">
@@ -129,7 +132,7 @@
 					  <div class="card-body">
 					    <h5 class="card-title">Diseño "Cuppon"</h5>
 					    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-					    <button type="button" class="btn btn-outline-dark" data-toggle="modal" data-target="#cuppon">Ver más</button>
+					    <button type="button" class="btn btn-outline-dark" data-toggle="modal" data-target="#cuppon" data-toggle="tooltip" data-placement="bottom" title="Conoce más acerca de Cuppon">Ver más</button>
 					  </div>
 					</div>
 			    </div>
@@ -141,7 +144,7 @@
 					  <div class="card-body">
 					    <h5 class="card-title">Diseño "Ricomida"</h5>
 					    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-					    <button type="button" class="btn btn-outline-dark" data-toggle="modal" data-target="#ricomida">Ver más</button>
+					    <button type="button" class="btn btn-outline-dark" data-toggle="modal" data-target="#ricomida" data-toggle="tooltip" data-placement="bottom" title="Conoce más acerca de Ricomida">Ver más</button>
 					  </div>
 					</div>
 			    </div>
@@ -153,7 +156,7 @@
 					  <div class="card-body">
 					    <h5 class="card-title">Diseño "Iguana Page"</h5>
 					    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-					    <button type="button" class="btn btn-outline-dark" data-toggle="modal" data-target="#iguana">Ver más</button>
+					    <button type="button" class="btn btn-outline-dark" data-toggle="modal" data-target="#iguana" data-toggle="tooltip" data-placement="bottom" title="Conoce más acerca de Iguana Page">Ver más</button>
 					  </div>
 					</div>
 			    </div>
@@ -172,7 +175,7 @@
 						  <div class="card-body">
 						    <h5 class="card-title">Diseño "Suricata"</h5>
 						    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-						    <button type="button" class="btn btn-outline-dark" data-toggle="modal" data-target="#suricata">Ver más</button>
+						    <button type="button" class="btn btn-outline-dark" data-toggle="modal" data-target="#suricata" data-toggle="tooltip" data-placement="bottom" title="Conoce más acerca de Suricata">Ver más</button>
 						  </div>
 						</div>
 				    </div>
@@ -184,7 +187,7 @@
 						  <div class="card-body">
 						    <h5 class="card-title">Diseño "Demark"</h5>
 						    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-						    <button type="button" class="btn btn-outline-dark" data-toggle="modal" data-target="#dmark">Ver más</button>
+						    <button type="button" class="btn btn-outline-dark" data-toggle="modal" data-target="#dmark" data-toggle="tooltip" data-placement="bottom" title="Conoce más acerca de Dmark">Ver más</button>
 						  </div>
 						</div>
 				    </div>
@@ -197,7 +200,7 @@
 						  <div class="card-body">
 						    <h5 class="card-title">Diseño "Meet&Coffee"</h5>
 						    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-						    <button type="button" class="btn btn-outline-dark" data-toggle="modal" data-target="#meet_coffee">Ver más</button>
+						    <button type="button" class="btn btn-outline-dark" data-toggle="modal" data-target="#meet_coffee" data-toggle="tooltip" data-placement="bottom" title="Conoce más acerca de Meet&Coffee">Ver más</button>
 						  </div>
 						</div>
 				    </div>
@@ -219,7 +222,8 @@
 				      </div>
 				      <div class="modal-body">
 				      	<img src="assets/img/meet_coffee.png" width="450px" height="270px">
-				      	<br><br>
+				      	<br>
+				      	<hr width="10%">	      
 				      	 	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 				        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 				        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
