--- a/index.html
+++ b/index.html
@@ -35,12 +35,12 @@
 	</nav>
 
 <!-- IMAGEN BG-HERO -->
-		<img class="bg-hero" src="assets/img/bg-hero.jpg">
+		<img class="bg-hero" src="assets/img/header.jpg">
 		<br><br>
 	
-
 <!-- SECTION SOBRE MI -->
 		<section id="sobre_mi" class= "d-none d-md-block">
+
 	<!--TITULAR-->
 			<h1 class="titulo" text-center>Sobre mi</h1>
 			<p class="subtitulo">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
